fixed script link

--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
       <button onclick="alert('Hello World')">Click Me</button>
       <button id="btn">Click Me</button>
 </body>
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 </html>
